<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">SayIt</string>
    <string name="mainActivityTitle" translatable="false">SayIt</string>
    <string name="logoSayItDescription" translatable="false">Logo SayIt</string>
    <string name="action_settings">Settings</string>
    <string name="langagePlaceholder">Language</string>

    <!-- Strings related to the main drawer -->
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="publishButtonLabel">Publish</string>
    <string name="drawer_menu_profil1">Profil 1</string>
    <string name="drawer_menu_profil2">Profil 2</string>
    <string name="drawer_menu_profil3">Profil 3</string>

    <!-- Strings related to login -->
    <string name="loginActivityTitle">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_loading">Signing in…</string>
    <string name="signInSucceeded">Sign in succeeded !</string>
    <string name="signInFailedInvalidCredentials">Invalid credentials</string>
    <string name="signInFailedUnableToConnect">Unable to connect to API</string>
    <string name="drawerMenuNavigationLogout">Logout</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_loading">Signing up…</string>
    <string name="signUpFailedPasswordDoesntMatch">Passwords doesn\'t match…</string>
    <string name="signUpFailedUnknownError">Sign up failed… Unknown error</string>
    <string name="signUpSucceeded">Sign up succeeded !</string>

    <!-- Strings related to publish activity -->
    <string name="publishActivityTitle">Publish</string>
    <string name="publicationsPublishedSuccessfully">Publication successfully published !</string>

    <!-- Strings related to expression list activity -->
    <string name="expressionSearchViewQueryHint">Search for a word, sentence or text</string>
    <string name="drawMainNavigationLabel">Navigation</string>
    <string name="drawerMenuNavigationPublish">Publish something</string>
    <string name="drawerMenuNavigationPublications">List of publications</string>
    <string name="expressionPlaceholder">Enter your text here</string>

    <!-- -->
    <string name="langage_fr">French</string>
    <string name="langage_sp">Spanish</string>
    <string name="langage_us">English</string>
    <string name="langage_de">German</string>
</resources>
