<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpressionPublisherFragment">

    <LinearLayout
        style="@style/expressionPublisherFragmentParentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/expressionField"
            style="@style/expressionToTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expressionPlaceholder" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/langageField"
                style="@style/langageField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/publishButton"
                android:gravity="left"
                android:hint="@string/langagePlaceholder" />

            <Button
                android:id="@+id/publishButton"
                style="@style/publishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/publishButtonLabel" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
