<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/expressionPublishFragmentParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/expressionField"
        style="@style/expressionToTranslate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxLines="4"
        android:gravity="top|start"
        android:hint="@string/expressionPlaceholder" />

    <TextView
        android:id="@+id/charLimitationView"
        android:layout_width="wrap_content"
        style="@style/CharacterLimitation"
        android:layout_height="wrap_content"
        android:text="500"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:minHeight="32dp">

        <Spinner
            android:id="@+id/langageSpinner"
            style="@style/langageField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/publishButton"
            android:padding="5dp"
            android:gravity="left"
            android:hint="@string/langagePlaceholder" />

        <Button
            android:id="@+id/publishButton"
            style="@style/publishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:text="@string/publishButtonLabel" />
    </RelativeLayout>
</LinearLayout>
