<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInWrapperLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OrangeSayIt"
    android:paddingBottom="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    tools:context=".SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoSayItLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/logoSayItDescription"
            android:src="@mipmap/logo_sayit" />

        <AutoCompleteTextView
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_field"
            android:fontFamily="serif"
            android:hint="@string/prompt_username"
            android:inputType="textAutoComplete"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:fontFamily="serif"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:typeface="serif" />

        <LinearLayout
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_dark_selector"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signInButtonLabel"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/FontLight"
                android:textSize="16sp"
                android:typeface="serif" />

            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_light"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpButtonLabel"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:text="@string/action_sign_up"
                android:textColor="@color/darkGrayText"
                android:textSize="16sp"
                android:typeface="serif" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
