<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInWrapperLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/OrangeSayIt"
    android:paddingBottom="15dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="15dp"
    tools:context=".SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_field"
            android:fontFamily="serif"
            android:hint="@string/prompt_username"
            android:inputType="textAutoComplete"
            android:imeActionId="@+id/signUpPassword1"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:typeface="serif"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/signUpPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_field"
            android:fontFamily="serif"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:typeface="serif"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/signUpPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:fontFamily="serif"
            android:hint="@string/prompt_password_repeat"
            android:imeActionId="@+id/signUpButtonFromSignup"
            android:imeActionLabel="@string/action_sign_up"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="15dp"
            android:singleLine="true"
            android:typeface="serif"
            android:textSize="16sp"
            />

        <LinearLayout
            android:id="@+id/signUpButtonFromSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_dark_selector"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpButtonLabelFromSignup"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/action_sign_up"
                android:textColor="@color/FontLight"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/signUpButtonProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
